--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-jinke-music-player": "^4.24.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^2.1.3",
+    "react-vexflow": "^0.0.4",
+    "vexflow": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
